objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_For_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked For Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Note__c</fullName>
        <label>Pricing Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Option__c</fullName>
        <label>Pricing_Option</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Reference_Only__c</fullName>
        <label>Pricing (Reference Only)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Service_Detail__c</fullName>
        <label>Product /Service Detail</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Non-Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestForProductMarkedForDelete__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request For Product Marked For Delete</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Marked_For_Delete__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Future__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.isMarketCheck__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Request_Summary__c</referenceTo>
        <relationshipLabel>Products Removed from Quote Request</relationshipLabel>
        <relationshipName>Product_Line_Item_delete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestForProductMarkedMarketCheck__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequestForProductMarketCheck</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.isMarketCheck__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Request_Summary__c</referenceTo>
        <relationshipLabel>Products for Market Check</relationshipLabel>
        <relationshipName>Product_Line_items_MarketCheck</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_For_Product_Marked_For_Future__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request For Product Marked For Future</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Future__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Marked_For_Delete__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.isMarketCheck__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Request_Summary__c</referenceTo>
        <relationshipLabel>Products to Quote</relationshipLabel>
        <relationshipName>Product_Line_Item_Marked_For_Future</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isMarketCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMarketCheck</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>